k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehicle-rental-2306245592-fe-service
  namespace: default
spec:
  selector:
    app: vehicle-rental-2306245592-fe
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
